<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_info_personali"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_info_personali" />

        <item
            android:id="@+id/nav_storico_interventi"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/nav_storico_interventi" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp" />

</menu>
