<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarStyle="insideInset"
    android:scrollbars="vertical"
    tools:context="com.gambino_serra.condomanager_fornitore.View.Utente.RegisterAmministratoreActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:id="@+id/text_AttivaCome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/label_activation_mode"
            android:textColor="#000000"
            android:textSize="@dimen/font_size_small" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="0.26"
            android:weightSum="1"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/amministratoreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radiogroup_amministratore" />

            <RadioButton
                android:id="@+id/fornitoreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/radiogroup_fornitore" />

        </RadioGroup>

        <Button
            android:id="@+id/btnAvanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/confirm" />


    </LinearLayout>

</ScrollView>